# Brian-Bachelor-Party

./: README.md  app.py  pyproject.toml
static/: costs.json
